--- a/src/gadgets/Searchbox-integration/MediaWiki:Gadget-Searchbox-integration.css
+++ b/src/gadgets/Searchbox-integration/MediaWiki:Gadget-Searchbox-integration.css
@@ -2,12 +2,15 @@
 #p-personal ul {
     float: left;
 }
+
 #p-personal ul {
     padding-left: 0;
 }
+
 #p-search {
-    margin-right: .5em;
+    margin-right: 0.5em;
 }
+
 #searchform,
 #simpleSearch {
     margin-top: 0 !important;
