--- a/src/gadgets/dark-mode-toggle-pagestyles/MediaWiki:Gadget-dark-mode-toggle-pagestyles.css
+++ b/src/gadgets/dark-mode-toggle-pagestyles/MediaWiki:Gadget-dark-mode-toggle-pagestyles.css
@@ -1,7 +1,7 @@
-/* Fixes for empty icons in New Vector and Minerva 
+/* Fixes for empty icons in New Vector and Minerva
 .mw-ui-icon-vector-gadget-pt-darkmode::before,
 .mw-ui-icon-portletlink-pt-darkmode::before {
-	background-image: url(/load.php?modules=oojs-ui.styles.icons-accessibility&image=moon);
+	background-image: url("/load.php?modules=oojs-ui.styles.icons-accessibility&image=moon");
 }
 
 .mw-ui-icon-portletlink-pt-darkmode::before {
@@ -10,12 +10,12 @@
 
 .client-dark-mode .mw-ui-icon-vector-gadget-pt-darkmode::before,
 .client-dark-mode .mw-ui-icon-portletlink-pt-darkmode::before {
-	background-image: url(/load.php?modules=oojs-ui.styles.icons-accessibility&image=bright);
+	background-image: url("/load.php?modules=oojs-ui.styles.icons-accessibility&image=bright");
 } */
 
 /* These same rules should also be in [[MediaWiki:Gadget-dark-mode.css]] but with higher specificity. */
 .skin-vector :not(#pt-darkmode) + #pt-watchlist::before {
-	content: "深色模式";
-	visibility: hidden;
-	margin-left: inherit;
+    content: "深色模式";
+    visibility: hidden;
+    margin-left: inherit;
 }
