--- a/src/gadgets/libBottomRightCorner/MediaWiki:Gadget-libBottomRightCorner.css
+++ b/src/gadgets/libBottomRightCorner/MediaWiki:Gadget-libBottomRightCorner.css
@@ -22,8 +22,8 @@ body.overlay-scrollbars.skin-vector #bottomRightCorner {
     padding: 5px 0;
     margin-top: 17px;
     background-color: #000;
-    color: #fff;
-    opacity: .6;
+    color: #FFF;
+    opacity: 0.6;
 }
 
 .mw-mmv-lightbox-open #bottomRightCorner {
