--- a/src/gadgets/sidebarHidden/MediaWiki:Gadget-sidebarHidden.css
+++ b/src/gadgets/sidebarHidden/MediaWiki:Gadget-sidebarHidden.css
@@ -2,7 +2,7 @@ html.sidebarHiddenOn #sidebarHidden-logo-link {
     z-index: 999;
     opacity: 0;
     pointer-events: none;
-    transition: .37s ease-in-out all;
+    transition: 0.37s ease-in-out all;
     position: absolute;
     top: 60px;
     cursor: pointer;
@@ -10,7 +10,7 @@ html.sidebarHiddenOn #sidebarHidden-logo-link {
     width: 0;
     left: 10em;
     text-align: center;
-    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, .3) 30%, rgba(255, 255, 255, .5)) !important;
+    background-image: linear-gradient(rgb(255 255 255 / 0%), rgb(255 255 255 / 30%) 30%, rgb(255 255 255 / 50%)) !important;
     background-color: transparent !important;
     overflow-x: hidden;
 }
@@ -34,7 +34,7 @@ html.sidebarHiddenOn body.sidebarHidden #sidebarHidden-logo-link {
 }
 
 html.sidebarHiddenOn #sidebarHidden-logo {
-    transition: .37s ease-in-out all;
+    transition: 0.37s ease-in-out all;
     height: 100%;
     width: auto;
     position: absolute;
@@ -44,17 +44,17 @@ html.sidebarHiddenOn #sidebarHidden-logo {
 }
 
 html.sidebarHiddenOn #sidebarHidden-arrow {
-    transition: .37s ease-in-out all;
+    transition: 0.37s ease-in-out all;
     position: fixed;
-    width: .8em;
-    height: .8em;
+    width: 0.8em;
+    height: 0.8em;
     top: calc(2.5em + 60px + 34px); /* 34px 是 2022 春季版头适配 */
     cursor: pointer;
-    padding: .3em;
+    padding: 0.3em;
     border-radius: 50%;
     text-align: center;
-    border: 1px solid rgb(167, 215, 249);
-    background: rgb(255, 255, 255);
+    border: 1px solid rgb(167 215 249);
+    background: rgb(255 255 255);
     z-index: 99;
     left: 9.3em;
 }
@@ -62,12 +62,12 @@ html.sidebarHiddenOn #sidebarHidden-arrow {
 html.sidebarHiddenOn #sidebarHidden-arrow-left,
 html.sidebarHiddenOn #sidebarHidden-arrow-right {
     position: absolute;
-    top: .3em;
-    left: .3em;
-    right: .3em;
-    bottom: .3em;
+    top: 0.3em;
+    left: 0.3em;
+    right: 0.3em;
+    bottom: 0.3em;
     pointer-events: none;
-    transition: .37s ease-in-out all;
+    transition: 0.37s ease-in-out all;
 }
 
 html.sidebarHiddenOn body.sidebarHidden #sidebarHidden-arrow-left,
@@ -81,7 +81,7 @@ html.sidebarHiddenOn body.sidebarHidden #sidebarHidden-arrow-right {
 }
 
 html.sidebarHiddenOn #sidebarHidden-arrow:hover {
-    background-color: rgb(223, 245, 255);
+    background-color: rgb(223 245 255);
 }
 
 @media screen and (min-width: 982px) {
@@ -96,13 +96,13 @@ html.sidebarHiddenOn body.sidebarHidden #sidebarHidden-arrow {
 
 html.sidebarHiddenOn #content,
 html.sidebarHiddenOn #footer {
-    transition-duration: .37s;
+    transition-duration: 0.37s;
     transition-timing-function: ease-in-out;
     transition-property: margin-left;
 }
 
 html.sidebarHiddenOn #mw-panel {
-    transition-duration: .37s;
+    transition-duration: 0.37s;
     transition-timing-function: ease-in-out;
     transition-property: z-index, opacity;
     z-index: 1;
